<resources>
    <string name="app_name">Vanilla Vinyl</string>
    <!--    Fragment Names in Nav Controller-->
    <string name="info_frag_textview">Info</string>
    <string name="display_frag_textview">CD Collections</string>
    <string name="data_entry_frag_textview">Add An Album</string>
    <string name="web_view_frag_textview">Album Browswer</string>
    <string name="dialog_frag_textview">Config</string>
    <string name="settings">settings</string> <!-- also used in main_menu-->
    <!--Fragment Specific Strings-->
    <string name="home_welcome">Organize All Your Albums Here!</string>
    <string name="main_start_btn">View Your Album Collection</string>
    <string name="main_web_view_btn">Browse Album Online</string>
    <!--webview-->
    <string name="go">Go</string>


    <string-array name="effects">
        <item>Crop Square</item>
        <item>Crop Circle</item>
        <item>Blur</item>
        <item>Pixelation</item>
        <item>Invert</item>
        <item>Rounded Corners</item>
    </string-array>

    <string-array name="effect_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="effect">Effect</string>
    <string name="show_message">Show Message at Start</string>
    <string name="show_now_picture">Show Now Picture</string>


    <!--    ^necessary for the new one^-->
    <!--    <string name="details_frag_textview">Find Album Cover</string>-->
    <!--    <string name="details2_frag_textview">Find Artist</string>-->

    <string name="message_body">Introducing your digital album collections!</string>
    <string name="welcome">Vanilla Vinyl</string>

    <!--    btns-->
    <string name="add_album">Add</string>
    <string name="remove_album">Delete</string>
    <string name="cancel_remove">Cancel Delete:)</string>

    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="prompt_add_freind">Made a new album? <br />add them to the Friend List!</string>

    <string name="your_album_list">Your Albums</string>

    <!--    btns-->
    <!--    <string name="btnnav_album_btn">Album</string>-->
    <!--    <string name="btnnav_artist_btn">Artist</string>-->

    <!--    Setting Fragment-->
    <string name="setting_colors">Colors</string>
    <string name="setting_blue">Blues Blue</string>
    <string name="setting_purple">Jazzy Purple</string>
    <string name="setting_green">Grunge Green</string>
    <string name="setting_pink">Pop Pink</string>

    <!--    Info Fragment-->
    <string name="info_version">Version: 1.0</string>
    <string name="info_copy_right">Copyright &#169; 2021, EZ Corp</string>

    <!--    Details Fragment-->
    <!--    <string name="details_hint_enter_mbid">Enter your [MBID] to find the album cover!</string>-->
    <!--    <string name="details_hint_search_for_artist">Search for...[artist name]</string>-->
    <string name="details_hint_album_name">Album Name: </string>
    <string name="details_hint_artist">Artist: </string>
    <string name="details_hint_cover_link">Cover Art Url: </string>
    <string name="details_hint_released">Released: </string>
    <string name="details_hint_comment">Comment: </string>
    <string name="details_album_name">Album Name: %s</string>
    <string name="details_artist">Artist: %s</string>
    <string name="details_cover_link">Cover Art Url: %s</string>
    <string name="details_released">Released: %s</string>
    <string name="details_comment">Comment: %s</string>

    <string name="unselect_first">Unselect or delete the selected Album first!</string>
    <string name="did_not_add">You did not add a album...</string>


    <!--Recycler View-->
    <string name="recycler_album">Album Name: </string>
    <string name="recycler_artist">Artist: </string>
    <string name="recycler_released">Released: </string>
    <string name="recycler_comment">Comment: </string>
    <!--    menu-->
    <string name="done">Done</string>

    <!--    array-->
    <string name="edit_profile">Edit Your User Profile</string>
    <string name="fav_season">favorite season?</string>
    <string name="user_name">Enter your username</string>
    <string name="hint_user_name">Enter username here...</string>
<!--    <string name="mascot">fav UofR mascot</string>-->

    <string-array name="seasonArray">
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
    </string-array>


    <!--    Alert-->
    <string name="ok">OK</string>
    <string name="alert">Attention</string>
    <string name="album_deleted_alert">Are you absolutely sure you want to delete %s?  :(</string>
    <string name="yes">Delete</string>
    <string name="no">Keep it!</string>
    <string name="reset">Reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
