<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<!--    <item-->
<!--        android:id="@+id/menu_settings"-->
<!--        android:title="@string/settings" />-->

    <item
        android:id="@+id/reset_menuItem"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/reset"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/settings_menuItem"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/info_menuItem"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/info_frag_textview"
        app:showAsAction="ifRoom|withText" />
</menu>