<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DataEntryFragment">


        <EditText
            android:id="@+id/edit_album_name"
            style="@style/text_view_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:hint="@string/details_hint_album_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edit_album_artist"
            style="@style/text_view_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:hint="@string/details_hint_artist"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_album_name" />

        <EditText
            android:id="@+id/edit_album_release"
            style="@style/text_view_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:hint="@string/details_hint_released"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_album_artist" />

        <EditText
            android:id="@+id/edit_album_cover_link"
            style="@style/text_view_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:hint="@string/details_hint_cover_link"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_album_release" />

        <EditText
            android:id="@+id/edit_album_comment"
            style="@style/text_view_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:hint="@string/details_hint_comment"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_album_cover_link" />

        <Button
            android:id="@+id/button_add"
            style="@style/button_style"
            android:layout_width="148dp"
            android:layout_height="54dp"
            android:layout_marginEnd="24dp"
            android:text="@string/button_add"
            app:layout_constraintEnd_toStartOf="@+id/button_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_album_comment" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/button_style"
            android:layout_width="148dp"
            android:layout_height="54dp"
            android:text="@string/button_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toEndOf="@+id/button_add"
            app:layout_constraintTop_toBottomOf="@+id/edit_album_comment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>