<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mzheng9.vanillavinyl.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_infoFragment"
            app:destination="@id/infoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_recordsDisplayFragment"
            app:destination="@id/recordsDisplayFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_webviewFragment"
            app:destination="@id/webviewFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_dialogFragment"
            app:destination="@id/dialogFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.mzheng9.vanillavinyl.ui.info.InfoFragment"
        android:label="@string/info_frag_textview"
        tools:layout="@layout/fragment_info">
        <action
            android:id="@+id/action_infoFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.mzheng9.vanillavinyl.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_out_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/recordsDisplayFragment"
        android:name="com.mzheng9.vanillavinyl.ui.details.RecordsDisplayFragment"
        android:label="@string/display_frag_textview"
        tools:layout="@layout/recordsdisplay_fragment">
        <action
            android:id="@+id/action_recordsDisplayFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_recordsDisplayFragment_to_dataEntryFragment"
            app:destination="@id/dataEntryFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_recordsDisplayFragment_self"
            app:destination="@id/recordsDisplayFragment" />
    </fragment>
    <fragment
        android:id="@+id/dataEntryFragment"
        android:name="com.mzheng9.vanillavinyl.ui.details.DataEntryFragment"
        android:label="@string/data_entry_frag_textview" >
        <action
            android:id="@+id/action_dataEntryFragment_to_recordsDisplayFragment"
            app:destination="@id/recordsDisplayFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/recordsDisplayFragment" />
    </fragment>
    <fragment
        android:id="@+id/webviewFragment"
        android:name="com.mzheng9.vanillavinyl.ui.webview.WebviewFragment"
        android:label="webview_fragment"
        tools:layout="@layout/webview_fragment" >
        <action
            android:id="@+id/action_webviewFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/dialogFragment"
        android:name="com.mzheng9.vanillavinyl.ui.home.DialogFragment"
        android:label="fragment_dialog"
        tools:layout="@layout/fragment_dialog" >
        <action
            android:id="@+id/action_dialogFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/homeFragment" />
    </fragment>
</navigation>